--- a/tools/pipelines/templates/build-docker-service.yml
+++ b/tools/pipelines/templates/build-docker-service.yml
@@ -341,6 +341,7 @@ extends:
               displayName: Pack
               inputs:
                 command: run
+                runInBackground: false
                 imageName: $(baseContainerTag)
                 containerCommand: pnpm lerna exec --no-private -- mv `npm pack` /usr/src/pack
                 volumes:
@@ -372,6 +373,7 @@ extends:
               displayName: npm run lint
               inputs:
                 command: run
+                runInBackground: false
                 imageName: $(baseContainerTag)
                 containerCommand: npm run lint
                 volumes:
@@ -386,6 +388,7 @@ extends:
                 displayName: npm run ci:test:coverage
                 inputs:
                   command: run
+                  runInBackground: false
                   imageName: $(baseContainerTag)
                   containerCommand: npm run ci:test:coverage
                   volumes:
@@ -406,6 +409,7 @@ extends:
                 displayName: npm run ${{ parameters.test }}
                 inputs:
                   command: run
+                  runInBackground: false
                   imageName: $(baseContainerTag)
                   containerCommand: npm run ${{ parameters.test }}
                   volumes:
@@ -428,6 +432,7 @@ extends:
               displayName: npm run ci:build:docs
               inputs:
                 command: run
+                runInBackground: false
                 imageName: $(baseContainerTag)
                 containerCommand: npm run ci:build:docs
                 volumes:
