--- a/tools/pipelines/build-docs.yml
+++ b/tools/pipelines/build-docs.yml
@@ -2,7 +2,14 @@
 # Licensed under the MIT License.
 
 # build-docs pipeline
-# This pipeline builds the main branch docs each time the client packages are built
+# This pipeline builds the main branch docs as well as previous major release branch docs each time the client packages are built.
+# Note that the method for getting the api json for main differs from previous versions. For main, the pipeline bundles
+# the published artifacts from other pipeline resources and publishes an artifact to the pipeline which can be later downloaded.
+# However, for previous version branches (in this case: lts) cannot run on the pipeline to generate resources. Thus, api-extractor
+# was run on lts locally and manually published to the azure storage as "lts-1.0.tar.gz" which is later downloaded using 
+# the AzureCLI@2 task. 
+# For now, the only previous version which is manually uploaded is lts. However, for any previous versions which cannot run on the
+# pipeline, we assume that the api json content would be uploaded to the azure storage in the format: latest-${{version}}.tar.gz
 
 name: $(Build.BuildId)
 
