--- a/package.json
+++ b/package.json
@@ -31,7 +31,6 @@
 		"bundle-analysis:collect": "npm run webpack:profile && flub generate bundleStats",
 		"bundle-analysis:run": "flub run bundleStats --dangerfile build-tools/packages/build-cli/lib/lib/dangerfile.js",
 		"changeset": "flub changeset add --releaseGroup client",
-		"check:are-the-types-wrong": "fluid-build --task check:are-the-types-wrong",
 		"check:versions": "flub check buildVersion -g client --path .",
 		"check:versions:fix": "flub check buildVersion -g client --path . --fix",
 		"checks": "fluid-build --task checks",
@@ -91,6 +90,7 @@
 		"syncpack:versions": "syncpack list-mismatches",
 		"syncpack:versions:fix": "syncpack fix-mismatches",
 		"test": "npm run test:mocha && npm run test:jest && npm run test:realsvc && npm run test:stress",
+		"test:are-the-types-wrong": "fluid-build --task test:are-the-types-wrong",
 		"test:bail": "npm run test:mocha:bail && npm run test:jest:bail",
 		"test:benchmark:copyresults": "copyfiles --exclude \"**/node_modules/**\" \"**/benchmarkOutput/**\" benchmarkOutput",
 		"test:benchmark:report": "pnpm run -r --no-sort --stream --no-bail test:benchmark:report --reporterOptions reportDir=./benchmarkOutput",
