--- a/packages/common/client-utils/package.json
+++ b/packages/common/client-utils/package.json
@@ -31,7 +31,6 @@
 		"build:test:jest": "tsc --project ./src/test/jest/tsconfig.json",
 		"build:test:mocha": "tsc --project ./src/test/mocha/tsconfig.json",
 		"build:test:types": "tsc --project ./src/test/types/tsconfig.json",
-		"check:are-the-types-wrong": "attw --pack",
 		"check:release-tags": "api-extractor run --local --config ./api-extractor-lint.json",
 		"ci:build:docs": "api-extractor run",
 		"clean": "rimraf --glob _api-extractor-temp dist lib \"**/*.tsbuildinfo\" \"**/*.build.log\" nyc",
@@ -43,6 +42,7 @@
 		"prettier": "prettier --check . --cache --ignore-path ../../../.prettierignore",
 		"prettier:fix": "prettier --write . --cache --ignore-path ../../../.prettierignore",
 		"test": "npm run test:mocha && npm run test:jest",
+		"test:are-the-types-wrong": "attw --pack",
 		"test:coverage": "c8 npm test",
 		"test:jest": "jest",
 		"test:mocha": "mocha  --recursive \"dist/test/mocha/**/*.spec.js\" --exit --project test/tsconfig.json",
