--- a/tools/pipelines/templates/build-docker-service.yml
+++ b/tools/pipelines/templates/build-docker-service.yml
@@ -469,6 +469,16 @@ extends:
               image: $(containerTag)
               remoteImage: $(latestContainerTag)
 
+        - ${{ if eq(parameters.packageManager, 'pnpm') }}:
+          # Prune the pnpm store before it's cached. This removes any deps that are not used by the current build.
+          - task: Bash@3
+            displayName: Prune pnpm store
+            inputs:
+              targetType: 'inline'
+              workingDirectory: ${{ parameters.buildDirectory }}
+              script: |
+                pnpm store prune
+
         templateContext:
           ${{ if eq(parameters.shouldPushDockerImage, true) }}:
             authenticatedContainerRegistries:
