--- a/tools/pipelines/server-routerlicious.yml
+++ b/tools/pipelines/server-routerlicious.yml
@@ -130,7 +130,7 @@ extends:
     packageManager: pnpm
     tagName: server
     isReleaseGroup: true
-    pool: Large-1ES
+    pool: NewLarge-linux-1ES
     pack: true
     lint: true
     test: ci:test
