--- a/packages/common/container-definitions/package.json
+++ b/packages/common/container-definitions/package.json
@@ -45,7 +45,7 @@
 	"dependencies": {
 		"@fluidframework/core-interfaces": "workspace:~",
 		"@fluidframework/driver-definitions": "workspace:~",
-		"@fluidframework/protocol-definitions": "^3.0.0",
+		"@fluidframework/protocol-definitions": "^3.1.0-220363",
 		"events": "^3.1.0"
 	},
 	"devDependencies": {
