--- a/packages/common/driver-definitions/package.json
+++ b/packages/common/driver-definitions/package.json
@@ -42,7 +42,7 @@
 	},
 	"dependencies": {
 		"@fluidframework/core-interfaces": "workspace:~",
-		"@fluidframework/protocol-definitions": "^3.0.0"
+		"@fluidframework/protocol-definitions": "^3.1.0-220363"
 	},
 	"devDependencies": {
 		"@fluid-tools/build-cli": "^0.28.0",
