--- a/packages/framework/oldest-client-observer/package.json
+++ b/packages/framework/oldest-client-observer/package.json
@@ -74,7 +74,7 @@
 		"@fluidframework/container-definitions": "workspace:~",
 		"@fluidframework/core-interfaces": "workspace:~",
 		"@fluidframework/core-utils": "workspace:~",
-		"@fluidframework/protocol-definitions": "^3.0.0"
+		"@fluidframework/protocol-definitions": "^3.1.0-220363"
 	},
 	"devDependencies": {
 		"@fluid-private/test-dds-utils": "workspace:~",
