--- a/packages/loader/container-loader/package.json
+++ b/packages/loader/container-loader/package.json
@@ -72,7 +72,7 @@
 		"@fluidframework/driver-definitions": "workspace:~",
 		"@fluidframework/driver-utils": "workspace:~",
 		"@fluidframework/protocol-base": "^2.0.1",
-		"@fluidframework/protocol-definitions": "^3.0.0",
+		"@fluidframework/protocol-definitions": "^3.1.0-220363",
 		"@fluidframework/telemetry-utils": "workspace:~",
 		"debug": "^4.3.4",
 		"double-ended-queue": "^2.1.0-0",
