--- a/packages/loader/driver-utils/package.json
+++ b/packages/loader/driver-utils/package.json
@@ -70,7 +70,7 @@
 		"@fluidframework/driver-definitions": "workspace:~",
 		"@fluidframework/gitresources": "^2.0.1",
 		"@fluidframework/protocol-base": "^2.0.1",
-		"@fluidframework/protocol-definitions": "^3.0.0",
+		"@fluidframework/protocol-definitions": "^3.1.0-220363",
 		"@fluidframework/telemetry-utils": "workspace:~",
 		"axios": "^0.26.0",
 		"lz4js": "^0.2.0",
