--- a/packages/runtime/runtime-definitions/package.json
+++ b/packages/runtime/runtime-definitions/package.json
@@ -39,7 +39,7 @@
 		"@fluidframework/container-definitions": "workspace:~",
 		"@fluidframework/core-interfaces": "workspace:~",
 		"@fluidframework/driver-definitions": "workspace:~",
-		"@fluidframework/protocol-definitions": "^3.0.0"
+		"@fluidframework/protocol-definitions": "^3.1.0-220363"
 	},
 	"devDependencies": {
 		"@fluid-tools/build-cli": "^0.28.0",
