--- a/packages/utils/tool-utils/package.json
+++ b/packages/utils/tool-utils/package.json
@@ -67,7 +67,7 @@
 		"@fluidframework/core-utils": "workspace:~",
 		"@fluidframework/driver-utils": "workspace:~",
 		"@fluidframework/odsp-doclib-utils": "workspace:~",
-		"@fluidframework/protocol-definitions": "^3.0.0",
+		"@fluidframework/protocol-definitions": "^3.1.0-220363",
 		"async-mutex": "^0.3.1",
 		"debug": "^4.3.4",
 		"jwt-decode": "^2.2.0",
