--- a/packages/drivers/routerlicious-driver/package.json
+++ b/packages/drivers/routerlicious-driver/package.json
@@ -82,10 +82,10 @@
 		"@fluidframework/driver-base": "workspace:~",
 		"@fluidframework/driver-definitions": "workspace:~",
 		"@fluidframework/driver-utils": "workspace:~",
-		"@fluidframework/gitresources": "^2.0.1",
-		"@fluidframework/protocol-base": "^2.0.1",
+		"@fluidframework/gitresources": "^3.0.0-220558",
+		"@fluidframework/protocol-base": "^3.0.0-220558",
 		"@fluidframework/protocol-definitions": "^3.1.0-220363",
-		"@fluidframework/server-services-client": "^2.0.1",
+		"@fluidframework/server-services-client": "^3.0.0-220558",
 		"@fluidframework/telemetry-utils": "workspace:~",
 		"cross-fetch": "^3.1.5",
 		"json-stringify-safe": "5.0.1",
