--- a/azure/packages/azure-client/package.json
+++ b/azure/packages/azure-client/package.json
@@ -68,7 +68,7 @@
 		"@fluidframework/protocol-definitions": "^3.1.0-220363",
 		"@fluidframework/routerlicious-driver": "workspace:~",
 		"@fluidframework/runtime-utils": "workspace:~",
-		"@fluidframework/server-services-client": "^2.0.1",
+		"@fluidframework/server-services-client": "^3.0.0-220558",
 		"@fluidframework/telemetry-utils": "workspace:~",
 		"axios": "^0.26.0"
 	},
