Add config option to enable/disable clustering mode

--- a/server/historian/packages/historian/config.json
+++ b/server/historian/packages/historian/config.json
@@ -27,7 +27,8 @@
 		"connectTimeout": 10000,
 		"maxRetriesPerRequest": 20,
 		"enableAutoPipelining": false,
-		"enableOfflineQueue": true
+		"enableOfflineQueue": true,
+		"enableClustering": false
 	},
 	"redisForThrottling": {
 		"host": "redis",
@@ -35,7 +36,8 @@
 		"connectTimeout": 10000,
 		"maxRetriesPerRequest": 20,
 		"enableAutoPipelining": false,
-		"enableOfflineQueue": true
+		"enableOfflineQueue": true,
+		"enableClustering": false
 	},
 	"error": {
 		"track": false,
